# VAIC-Lib

./: .gitignore  CMakeLists.txt
include/devices/: Color.h  Device.h  Distance.h  ExtendedADI.h  Motor.h  safe_vexlink.h
include/system/: Components.h  Serial.h  Tasks.h  system_daemon.h
include/utils/: sync.h
include/vex/: v5_cpp.h  vex_device.h
src/devices/: Color.cpp  Device.cpp  Distance.cpp  ExtendedADI.cpp  Motor.cpp
src/system/: Components.cpp  Serial.cpp  Tasks.cpp  display.cpp  funni.c  system_daemon.c
src/utils/: sync.cpp
